objects/JBCXM__PlaybookTasks__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__DeltaDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Delta between due date source field and due date</description>
        <label>Delta days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__DueDateSrc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Due date source</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipLabel>Due Date Source Option</relationshipLabel>
        <relationshipName>DueDateSourceOption</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__DynamicFields__c</fullName>
        <label>Dynamic Fields</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DynamicOwnerLabel__c</fullName>
        <label>Owner Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__DynamicOwner__c</fullName>
        <label>Owner Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsDynamicOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has dynamic owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Playbook Task</relationshipLabel>
        <relationshipName>PlaybookTask</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>JBCXM__PlaybookTasks__c</referenceTo>
        <relationshipLabel>Depedent tasks</relationshipLabel>
        <relationshipName>DepedentTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__PlaybookId__c</fullName>
        <label>Playbook Id</label>
        <referenceTo>JBCXM__Playbook__c</referenceTo>
        <relationshipLabel>Playbook Tasks</relationshipLabel>
        <relationshipName>PlaybookTasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__Priority__c</fullName>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__SkipOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skip Option</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipLabel>Due Date Skip Option</relationshipLabel>
        <relationshipName>DueDateSkipOption</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__TaskJSON__c</fullName>
        <label>Task JSON</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipLabel>Playbook Task Type</relationshipLabel>
        <relationshipName>PlaybookTaskType</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Playbook Task</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Playbook Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>